# lingora

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  IMPROVEMENTS.md  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
app/: database.py  gemini_live.py  input.css  main.py  models.py  pyproject.toml  schemas.py  utils.py
app/static/css/: 404.css  index.css  style.css  translator.css
app/static/js/: audio_translator.js  index.js  indexGSAP.js  translator.js  translatorDotLoader.js
app/templates/: 404.html  index.html  translator.html
app/tests/: conftest.py  test_health.py  test_translate.py
static/css/: style.css
