[project]
name = "lingora"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "google-genai>=2.8.0",
    "gunicorn>=26.0.0",
    "jinja2>=3.1.6",
    "openai>=1.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ty>=0.0.44",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["app/tests"]
asyncio_mode = "auto"
